Fixed #147 If you want, it can be changed to overflow: scroll but not all platforms make the scrollbar obvious.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -518,7 +518,7 @@ div#photo-display {
 
       .body-section {
         @extend .clearfix;
-
+        word-wrap: break-word;
         &.photos {
           text-align: center;
           padding-bottom: 0.4em;
